# aktin_case_study

./: .gitignore  README.md  pyproject.toml
addons/online_course/: README.md  __init__.py  __manifest__.py
addons/online_course/models/: __init__.py  course.py  enrollment.py  res_users.py
addons/online_course/security/: ir.model.access.csv  online_course_security.xml
addons/online_course/static/src/css/: style.css
addons/online_course/tests/: __init__.py  test_course.py
addons/online_course/views/: actions.xml  course_views.xml  menu_items.xml  res_users_views.xml
